Supporting standard aatibutes & lookups

--- a/datatableLwcFsc/force-app/main/default/lwc/dttest/dttest.html
+++ b/datatableLwcFsc/force-app/main/default/lwc/dttest/dttest.html
@@ -26,6 +26,6 @@ xx/xx/20 -    Eric Smith -    Version 1.0
         </lightning-datatable>
     </template>
     <template if:true={showSpinner}>
-        <lightning-spinner alternative-text="Loading" size="medium"></lightning-spinner>
+        <lightning-spinner alternative-text="Loading" size="large"></lightning-spinner>
     </template> 
 </template>
