--- a/datatableLwcFsc/force-app/main/default/lwc/datatableLwcFsc/datatableLwcFsc.html
+++ b/datatableLwcFsc/force-app/main/default/lwc/datatableLwcFsc/datatableLwcFsc.html
@@ -6,7 +6,7 @@ This component allows the user to configure and display a datatable in a Flow sc
 Features:   The only required paramters are the SObject collection of records and a list of field API names
             The field label and field type will default to what is defined in the object
             Lookup fields are supported and will display the referenced record's name field as a clickable link
-            All columns are sortable
+            All columns are sortable, including lookups
             The selection column can be multi-select (Checkboxes), single-select (Radio Buttons), or hidden
             A collection of pre-selected rows can be passed into the component
             Inline editing is supported with changed values passed back to the flow
