--- a/datatableLwcFsc/force-app/main/default/lwc/datatableLwcFsc/datatableLwcFsc.html
+++ b/datatableLwcFsc/force-app/main/default/lwc/datatableLwcFsc/datatableLwcFsc.html
@@ -5,6 +5,7 @@ This component allows the user to configure and display a datatable in a Flow sc
 
 Features:   The only required paramters are the SObject collection of records and a list of field API names
             The field label and field type will default to what is defined in the object
+            Numeric fields will display with the correct number of decimal places as defined in the object
             Lookup fields are supported and will display the referenced record's name field as a clickable link
             All columns are sortable, including lookups
             The selection column can be multi-select (Checkboxes), single-select (Radio Buttons), or hidden
@@ -14,6 +15,7 @@ Features:   The only required paramters are the SObject collection of records an
                 Editable
                 Header Icon
                 Header Label
+                Custom Type Attributes
                 Initial Column Width
 
 xx/xx/20 -  Eric Smith -    Version 1.0
