Fixed space removal on custom attributes

--- a/datatableLwcFsc/force-app/main/default/lwc/datatableLwcFsc/datatableLwcFsc.html
+++ b/datatableLwcFsc/force-app/main/default/lwc/datatableLwcFsc/datatableLwcFsc.html
@@ -14,6 +14,7 @@ Features:   The only required paramters are the SObject collection of records an
             Unlike the original datatable component, only the edited records will be passed back to the flow
             Optional attribute overrides are supported and can be specified by column # or by field name, including:
                 Alignment
+                Custom Cell Attributes
                 Editable
                 Header Icon
                 Header Label
