Fix time field display

--- a/datatableLwcFsc/force-app/main/default/lwc/datatableLwcFsc/datatableLwcFsc.html
+++ b/datatableLwcFsc/force-app/main/default/lwc/datatableLwcFsc/datatableLwcFsc.html
@@ -14,11 +14,12 @@ Features:   The only required paramters are the SObject collection of records an
             Unlike the original datatable component, only the edited records will be passed back to the flow
             Optional attribute overrides are supported and can be specified by column # or by field name, including:
                 Alignment
-                Custom Cell Attributes
+                Custom Cell Attributes with nested values {name: {name:value}}
                 Editable
                 Header Icon
                 Header Label
-                Custom Type Attributes
+                Other Custom Column Attributes with nested values {name: {name:value}}
+                Custom Type Attributes with nested values {name: {name:value}}
                 Initial Column Width
 
 xx/xx/20 -  Eric Smith -    Version 1.0
