Enabled bottom bar suppress

--- a/datatableLwcFsc/force-app/main/default/lwc/datatableLwcFsc/datatableLwcFsc.html
+++ b/datatableLwcFsc/force-app/main/default/lwc/datatableLwcFsc/datatableLwcFsc.html
@@ -38,6 +38,7 @@ xx/xx/20 -  Eric Smith -    Version 1.0
             hide-checkbox-column={hideCheckboxColumn}
             suppress-bottom-bar={suppressBottomBar}
             onsort={updateColumnSorting}
+            oncellchange={handleCellChange}
             onsave={handleSave}
             oncancel={cancelChanges}
             onrowselection={handleRowSelection}
