--- a/datatableLwcFsc/force-app/main/default/lwc/datatableLwcFsc/datatableLwcFsc.html
+++ b/datatableLwcFsc/force-app/main/default/lwc/datatableLwcFsc/datatableLwcFsc.html
@@ -13,6 +13,7 @@ Features:   The only required paramters are the SObject collection of records an
             A collection of pre-selected rows can be passed into the component
             Inline editing is supported with changed values passed back to the flow
             Unlike the original datatable component, only the edited records will be passed back to the flow
+            The maximum number of rows to display can be set by the user
             Optional attribute overrides are supported and can be specified by column # or by field name, including:
                 Alignment               
                 Editable
