--- a/datatableLwcFsc/force-app/main/default/lwc/datatableLwcFsc/datatableLwcFsc.html
+++ b/datatableLwcFsc/force-app/main/default/lwc/datatableLwcFsc/datatableLwcFsc.html
@@ -14,7 +14,7 @@ Features:   The only required paramters are the SObject collection of records an
             Inline editing is supported with changed values passed back to the flow
             Unlike the original datatable component, only the edited records will be passed back to the flow
             The maximum number of rows to display can be set by the user
-            Optional attribute overrides are supported and can be specified by column # or by field name, including:
+            Optional attribute overrides are supported and can be specified by list, column # or by field name, including:
                 Alignment               
                 Editable
                 Header Icon
