--- a/datatableLwcFsc/force-app/main/default/lwc/datatableLwcFsc/datatableLwcFsc.html
+++ b/datatableLwcFsc/force-app/main/default/lwc/datatableLwcFsc/datatableLwcFsc.html
@@ -4,6 +4,13 @@ Lightning Web Component for Flow Screens:       datatableLwcFsc
 
 This component allows the user to configure and display a datatable in a Flow screen.
 
+Additional components packaged with this LWC:
+
+                    Lightning Web Components:   
+
+                    Apex Classes:               SObjectController 
+                                                SObjectControllerTest
+
 Features:   The only required paramters are the SObject collection of records and a list of field API names
             The field label and field type will default to what is defined in the object
             Numeric fields will display with the correct number of decimal places as defined in the object
@@ -24,7 +31,7 @@ Features:   The only required paramters are the SObject collection of records an
                 Custom Type Attributes including those with nested values {name: {name:value}}
                 Other Custom Column Attributes including those with nested values {name: {name:value}}
 
-xx/xx/20 -  Eric Smith -    Version 1.0
+04/01/20 -  Eric Smith -    Version 1.0
 
 Copyright (c) 2020, Eric Smith
 
