--- a/datatableLwcFsc/force-app/main/default/lwc/datatableLwcFsc/datatableLwcFsc.html
+++ b/datatableLwcFsc/force-app/main/default/lwc/datatableLwcFsc/datatableLwcFsc.html
@@ -11,6 +11,8 @@ Additional components packaged with this LWC:
                     Apex Classes:               SObjectController 
                                                 SObjectControllerTest
 
+04/01/20 -  Eric Smith -    Version 1.0
+
 Features:   The only required paramters are the SObject collection of records and a list of field API names
             The field label and field type will default to what is defined in the object
             Numeric fields will display with the correct number of decimal places as defined in the object
@@ -31,7 +33,10 @@ Features:   The only required paramters are the SObject collection of records an
                 Custom Type Attributes including those with nested values {name: {name:value}}
                 Other Custom Column Attributes including those with nested values {name: {name:value}}
 
-04/01/20 -  Eric Smith -    Version 1.0
+04/xx/20 -  Eric Smith -    Version 1.1
+
+Additions:  New Column Attribute to support a column filter
+
 
 Copyright (c) 2020, Eric Smith
 
