--- a/datatableLwcFsc/force-app/main/default/lwc/datatableLwcFsc/datatableLwcFsc.html
+++ b/datatableLwcFsc/force-app/main/default/lwc/datatableLwcFsc/datatableLwcFsc.html
@@ -33,7 +33,7 @@ Features:   The only required paramters are the SObject collection of records an
                 Custom Type Attributes including those with nested values {name: {name:value}}
                 Other Custom Column Attributes including those with nested values {name: {name:value}}
 
-04/xx/20 -  Eric Smith -    Version 1.1
+04/14/20 -  Eric Smith -    Version 1.1
 
 Additions:  New Column Attribute to support column filtering
 
