Set Version Date

--- a/Summer20/force-app/main/default/lwc/datatableLwcFsc/datatableLwcFsc.html
+++ b/Summer20/force-app/main/default/lwc/datatableLwcFsc/datatableLwcFsc.html
@@ -11,7 +11,7 @@ Additional components packaged with this LWC:
                     Apex Classes:               SObjectController 
                                                 SObjectControllerTest
 
-05/xx/20 -  Eric Smith -    Version 2.0 
+04/22/20 -  Eric Smith -    Version 2.0 
 
 Enhancements:   
             Summer '20 New Feature - Dynamic Object Type
