--- a/Datatable and Flow List View/force-app/main/default/lwc/datatableLwcFsc/datatableLwcFsc.html
+++ b/Datatable and Flow List View/force-app/main/default/lwc/datatableLwcFsc/datatableLwcFsc.html
@@ -20,7 +20,8 @@ Enhancements:
 
 05/23/20 -  Eric Smith -    Version 1.3
 Updates:    Added support for a serialized JSON string of records of a user defined object
-            Bug Fix - Fixed error when editing multiple rows            
+            Added an attribute to specify the height of the datatable
+            Bug Fix - Fixed error when editing multiple rows           
 
 05/06/20 -  Eric Smith -    Version 1.2
 Updates:    Handle lookup Objects without a Name field & 
@@ -100,7 +101,7 @@ NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVE
         </template>
 
         <!-- DATATABLE -->
-        <div style="height:calc(100vh - 100px)">
+        <div style={tableHeight}>
             <lightning-datatable
                 data={mydata}
                 columns={columns}
