--- a/Datatable and Flow List View/force-app/main/default/lwc/datatableLwcFsc/datatableLwcFsc.html
+++ b/Datatable and Flow List View/force-app/main/default/lwc/datatableLwcFsc/datatableLwcFsc.html
@@ -12,7 +12,7 @@ Additional components packaged with this LWC:
                                                 SObjectControllerTest
                                                
 
-04/22/20 -  Eric Smith -    Version 2.0 
+04/22/20 -  Eric Smith -    Version 2.0 (Summer '20)
 
 Enhancements:   
             Summer '20 New Feature - Dynamic Object Type
