--- a/Datatable and Flow List View/force-app/main/default/lwc/datatableV2/datatableV2.html
+++ b/Datatable and Flow List View/force-app/main/default/lwc/datatableV2/datatableV2.html
@@ -1,6 +1,6 @@
 <!-- 
     
-Lightning Web Component for Flow Screens:       datatableLwcFsc
+Lightning Web Component for Flow Screens:       datatableV2
 
 This component allows the user to configure and display a datatable in a Flow screen.
 
