Fix spinner, size default & added box border

--- a/Datatable and Flow List View/force-app/main/default/lwc/datatableV2/datatableV2.html
+++ b/Datatable and Flow List View/force-app/main/default/lwc/datatableV2/datatableV2.html
@@ -103,7 +103,7 @@ NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVE
         </template>
 
         <!-- DATATABLE -->
-        <div style={tableHeight}>
+        <div style={tableHeight} class={borderClass}>
             <lightning-datatable
                 data={mydata}
                 columns={columns}
