Removed default value for Table Height

--- a/Datatable and Flow List View/force-app/main/default/lwc/datatableV2/datatableV2.html
+++ b/Datatable and Flow List View/force-app/main/default/lwc/datatableV2/datatableV2.html
@@ -12,6 +12,9 @@ Additional components packaged with this LWC:
                                                 SObjectController2Test
                                                
 
+06/xx/20 -  Eric Smith -    Version 2.33
+            Updates:        Removed default value for Table Height                                                
+
 06/03/20 -  Eric Smith -    Version 2.32
             Bug Fix:        Fixed error when editing more than one column in a single row while suppressing the Cancel/Save buttons
 
